--- a/piecework/miniprogram/pages/work/work.wxml
+++ b/piecework/miniprogram/pages/work/work.wxml
@@ -12,18 +12,27 @@
   </view>
 </view>
 
+  <view class="banner" wx:if="{{issupervisor}}">
+    Banner ...
+  </view>
 
   <view class="worklist" wx:if="{{issupervisor}}">
     <view class="supervisor-menu">
-      <view bindtap="employlist">员工名单</view>
-      <view type="primary" bindtap="scancode">扫一扫</view>
-      <view bindtap="uncompletedlist">进行中</view>
-      <view bindtap="completedlist">已完成</view>
-    </view>    
-    <view class="supervisor-menu">
-      <view bindtap="employlist">员工名单</view>
-      <view type="primary" bindtap="scancode">扫一扫</view>
-      <view bindtap="uncompletedlist">进行中</view>
-      <view bindtap="completedlist">已完成</view>
+      <view bindtap="employlist">
+      <image src="/images/icon/table.png" mode="scaleToFill"></image>
+      员工表</view>
+      <view type="primary" bindtap="scancode">
+      <image src="/images/icon/order.png" mode="scaleToFill"></image>
+      扫一扫</view>
+      <view bindtap="uncompletedlist">
+      <image src="/images/icon/planning.png" mode="scaleToFill"></image>
+      进行中</view>
+      <view bindtap="completedlist">
+      <image src="/images/icon/complete.png" mode="scaleToFill"></image>
+      已完成</view>
     </view>
+  </view>
+
+  <view wx:if="{{issupervisor}}" class="boardbox">
+    <view class="board">最新通知 ...</view>
   </view>
