--- a/piecework/miniprogram/pages/completedlist/completedlist.wxss
+++ b/piecework/miniprogram/pages/completedlist/completedlist.wxss
@@ -1,6 +1,4 @@
-.container{
-  margin-top: 100rpx;
-}
+
 
 .completedlist{
   width: 700rpx;
@@ -12,4 +10,15 @@
   line-height: 125rpx;
   color: white;
   font-weight: 600;
+}
+.banner{
+  width: 100%;
+  height: 100rpx;
+  background-color: #434343;
+  margin-bottom: 100rpx;
+  color: white;
+  line-height: 100rpx;
+  font-size: 36rpx;
+  font-weight: 600;
+  text-align: center;
 }
