--- a/piecework/miniprogram/pages/employlist/employlist.wxml
+++ b/piecework/miniprogram/pages/employlist/employlist.wxml
@@ -1,3 +1,6 @@
 <view class="container">
+  <view class="banner">
+  员工表</view>
+
   <view wx:for="{{result.data}}" class="employlist">员工工号：{{result.data[index].loginname}} \n\r\n\r\n\r\n\r 姓名 ：{{result.data[index].name}}</view>
 </view>
