--- a/piecework/miniprogram/pages/contact/contact.wxss
+++ b/piecework/miniprogram/pages/contact/contact.wxss
@@ -1,1 +1,16 @@
-/* miniprogram/pages/contact/contact.wxss */
+.container{
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to bottom,#434343,#333333);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact{
+  color: white;
+  font-weight: 600;
+  font-size: 36rpx;
+  text-align: center;
+  margin-bottom: 100rpx;
+}
