--- a/piecework/miniprogram/pages/piecework/piecework.wxss
+++ b/piecework/miniprogram/pages/piecework/piecework.wxss
@@ -1,4 +1,19 @@
 .container{
-  background: #434343;
+  height: 100vh;
+  background: linear-gradient(to bottom,#434343,#333333);
+  
+}
+
+.container view{
   color: white;
+  font-size: 36rpx;
+  font-weight: 700;
+  margin-top: 50rpx;
+}
+
+.remark{
+  border: 2rpx solid white;
+  margin-top: 50rpx;
+  color: white;
+  font-size: 32rpx;
 }
