--- a/piecework/miniprogram/pages/settings/settings.wxss
+++ b/piecework/miniprogram/pages/settings/settings.wxss
@@ -1,1 +1,20 @@
-/* miniprogram/pages/settings/settings.wxss */
+.setting-box{
+  width: 100%;
+  background: linear-gradient(to bottom,#434343,#333333);
+  height: 100vh;
+}
+
+.setting-item{
+  width: 100%;
+  height: 120rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.setting-item-content{
+  width: 80%;
+  border-bottom: 2rpx solid #787878;
+  color: white;
+  
+}
