--- a/piecework/miniprogram/pages/employdetails/employdetails.wxss
+++ b/piecework/miniprogram/pages/employdetails/employdetails.wxss
@@ -2,12 +2,11 @@
 
 .workitem{
   width: 700rpx;
-  height: 100rpx;
+  height: 200rpx;
   background: linear-gradient(to bottom,#434343,#333333);
   border-radius: 20rpx;
   margin-bottom: 30rpx;
   padding-left: 20rpx;
-  line-height: 125rpx;
   color: white;
   font-weight: 600;
 }
@@ -28,4 +27,9 @@
   font-size: 36rpx;
   font-weight: 600;
   text-align: center;
+}
+
+.workitem view{
+  width: inherit;
+  height: 50rpx;
 }
