--- a/piecework/miniprogram/pages/uncompletedlist/uncompletedlist.wxss
+++ b/piecework/miniprogram/pages/uncompletedlist/uncompletedlist.wxss
@@ -1,12 +1,12 @@
 
-.uncompletedlist{
+
+.completedlist{
   width: 700rpx;
-  height: 100rpx;
+  height: 200rpx;
   background: linear-gradient(to bottom,#434343,#333333);
   border-radius: 20rpx;
   margin-bottom: 30rpx;
   padding-left: 20rpx;
-  line-height: 125rpx;
   color: white;
   font-weight: 600;
 }
@@ -14,10 +14,38 @@
   width: 100%;
   height: 100rpx;
   background-color: #434343;
-  margin-bottom: 100rpx;
+  margin-bottom: 150rpx;
   color: white;
   line-height: 100rpx;
   font-size: 36rpx;
   font-weight: 600;
   text-align: center;
+}
+
+.order{
+  width: 300rpx;
+  height: 50rpx;
+  background-color: #434343;
+  color: white;
+  position: fixed;
+  top: 150rpx;
+  left: 20rpx;
+  border-radius: 30rpx;
+  text-align: center;
+}
+
+.opac{
+  opacity: 10%;
+}
+
+.orderbox{
+  width: 700rpx;
+  height: auto;
+  border: 5rpx solid #434343;
+  margin-bottom: 50rpx;
+}
+
+.orderlist:hover{
+  color: white;
+  background-color: #434343;
 }
