--- a/piecework/miniprogram/pages/work/work.wxml
+++ b/piecework/miniprogram/pages/work/work.wxml
@@ -12,7 +12,7 @@
   </view>
 </view>
 
-  <view class="banner" wx:if="{{issupervisor}}">
+  <view class="banner" wx:if="{{issupervisor || isadminist}}">
     Banner ...
   </view>
 
@@ -33,9 +33,9 @@
     </view>
   </view>
 
-  <view wx:if="{{issupervisor}}" class="boardbox">
-    <view class="board">最新通知 ...</view>
-  </view>
+   <view wx:if="{{issupervisor}}" class="boardbox">
+    <view class="board">{{board}}</view>
+  </view> 
 
   <view wx:if="{{isadminist}}">
     <view class="supervisor-menu">
@@ -54,16 +54,23 @@
     </view>
     <view class="supervisor-menu">
       <view bindtap="supervisorlist">
-      <image src="/images/icon/table.png" mode="scaleToFill"></image>
+      <image src="/images/icon/supervisor.png" mode="scaleToFill"></image>
       监工表</view>
       <view type="primary" bindtap="newtask">
-      <image src="/images/icon/order.png" mode="scaleToFill"></image>
+      <image src="/images/icon/open.png" mode="scaleToFill"></image>
       任务发布</view>
       <view bindtap="modifytask">
-      <image src="/images/icon/planning.png" mode="scaleToFill"></image>
+      <image src="/images/icon/modify.png" mode="scaleToFill"></image>
       任务调整</view>
       <view bindtap="newremark">
-      <image src="/images/icon/complete.png" mode="scaleToFill"></image>
-      通知</view>
+      <image src="/images/icon/board.png" mode="scaleToFill"></image>
+      通知发布</view>
     </view>
+
+
+
+  <view wx:if="{{isadminist}}" class="boardbox">
+    <view class="board">{{board}}</view>
+  </view>
+
   </view>
