--- a/piecework/miniprogram/pages/details/details.wxml
+++ b/piecework/miniprogram/pages/details/details.wxml
@@ -1,2 +1,4 @@
-<!--miniprogram/pages/details/details.wxml-->
-<text>miniprogram/pages/details/details.wxml</text>
+<view class="container">
+  <view>
+  </view>
+</view>
