--- a/piecework/miniprogram/pages/settings/settings.wxss
+++ b/piecework/miniprogram/pages/settings/settings.wxss
@@ -1,7 +1,15 @@
+.container{
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background: linear-gradient(to left,#434343,#aaaaaa);
+}
+
 .setting-box{
   width: 100%;
   background: linear-gradient(to bottom,#434343,#333333);
   height: 100vh;
+  margin-top: 15vh;
 }
 
 .setting-item{
@@ -10,6 +18,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .setting-item-content{
@@ -17,4 +26,8 @@
   border-bottom: 2rpx solid #787878;
   color: white;
   
+}
+
+.btn{
+  margin-top: 10vh;
 }
